Thu Nov 23 18:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkfile.c: Add warning if trying to import PartyGammon game files

Sat Nov 18 14:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Fix bug in saving/exporting custom designs

Wed Nov 15 16:53:19 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, set.c, show.c: in fresh installs: g11.xml, more sensible
	rollout settings, infinite number of moves analysed.
	* gtkboard.c, gtkgame.c, gtkpanels.c: docked panels wider by default.
	gnubg starts maximized(make this an option?). Attempt to fix ugly
	resizes in player/score frames.

Thu Nov 16 15:27:32 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkgame.c, record.c, record.h, gtkprefs.c: Move all
	rc files to g_get_home_dir()/.gnubg (both windows and unix).

Tue Nov 14 21:17:55 GMT 2006 Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c = GTKShowScoreSheet callback to MoveListIntoView 
	  2nd parameter is pointer to int, not int

Mon Nov 13 22:32:37 CET 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in,g gnubg.c , gtkbearoff.c , gtkgame.c ,
	gtkprefs.c , record.c: attempt fix of recent problems with
	szHomeDirectory

Mon Nov 13 18:50:22 CET 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, board3d/.cvsignore, board3d/Makefile.am,
	lib/.cvsignore, lib/Makefile.am: Use libtool static libs.

Mon Nov 13 12:16:54 CET 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, board3d/Makefile.am, lib/Makefile.am,
	non-src/Makfile.am: Add various files to EXTRA_DIST or sources.

Fri Nov 10 15:22:46 CET 2006 Christian Anthon <anthon@kiku.dk>

	* fonts/Makefile.am, flags/Makefile.am: Add flags and fonts to
	EXTRA_DIST

Fri Nov 10 12:40:47 CET 2006 Christian Anthon <anthon@kiku.dk>

	* configure.in: Version bump, MAIN now version 0.16-devel

Fri Nov 10 12:35:50 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gnubgmodule.c: Hopefully fix AMD64 relational database crash
